30/07/24 - por all proyectos si pero por id proyectos no da especialidades